# AcderatorServer

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  integration.yml  lint.yml
migrations/: 20250727114537_acderator_master_table.sql  20250727114537_acderator_transaction_table.sql
scripts/: check_env.rs  cleanup_unused_uses.sh  setup.sh
src/: common.rs  main.rs  mod.rs  utils.rs
src/auth/: api.rs  lib.rs  mod.rs
src/common/: codec.rs  config.rs  error.rs  middleware.rs  mod.rs  state.rs
src/debug/: api.rs  debug.html  lib.rs  master.html  mod.rs
src/master/: lib.rs  mod.rs
src/query/: master.rs  mod.rs  score.rs  score_session.rs  session.rs  song.rs  user.rs
src/score/: api.rs  lib.rs  mod.rs
src/static/master/: data.json
src/user/: api.rs  lib.rs  mod.rs
static/master/: data.json
